task3/outputs/05-peer-authentication.yaml
apiVersion: v1
items:
- apiVersion: security.istio.io/v1
  kind: PeerAuthentication
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"security.istio.io/v1","kind":"PeerAuthentication","metadata":{"annotations":{},"name":"payments-strict-mtls","namespace":"payments"},"spec":{"mtls":{"mode":"STRICT"}}}
    creationTimestamp: "2026-07-30T18:32:47Z"
    generation: 1
    name: payments-strict-mtls
    namespace: payments
    resourceVersion: "108293"
    uid: bbbade57-eaf3-41e9-8260-00a880148c10
  spec:
    mtls:
      mode: STRICT
kind: List
metadata:
  resourceVersion: ""
