task3/outputs/11-network-policy.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-reporting-to-ledger","namespace":"payments"},"spec":{"ingress":[{"from":[{"podSelector":{"matchLabels":{"app":"reporting"}}}],"ports":[{"port":8080,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"app":"ledger-api"}},"policyTypes":["Ingress"]}}
    creationTimestamp: "2026-07-30T19:27:48Z"
    generation: 1
    name: allow-reporting-to-ledger
    namespace: payments
    resourceVersion: "122801"
    uid: 8376f61c-652b-4cc1-b8ac-6837354743e8
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            app: reporting
      ports:
      - port: 8080
        protocol: TCP
    podSelector:
      matchLabels:
        app: ledger-api
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"default-deny-ingress","namespace":"payments"},"spec":{"podSelector":{},"policyTypes":["Ingress"]}}
    creationTimestamp: "2026-07-30T19:27:48Z"
    generation: 1
    name: default-deny-ingress
    namespace: payments
    resourceVersion: "122800"
    uid: 79a8ecc3-4c3d-463e-bc08-f2a9792f6d85
  spec:
    podSelector: {}
    policyTypes:
    - Ingress
kind: List
metadata:
  resourceVersion: ""
